[package]
name = "openapi-mocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
oas3 = "0.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
