[package]
name = "openapi-mocker"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/pachecoio/openapi-mocker"
keywords = ["openapi", "mock", "mock-server"]
categories = ["web-programming"]
authors = ["Thiago Pacheco"]
description = "A simple OpenAPI 3.0 mocker"
license = "MIT"
license-file = "LICENSE"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
oas3 = "0.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
